--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<hr>
-<app-server></app-server>
-<app-practice></app-practice>
+<div class="container">
+  <div class="row">
+
+    <div class="col-xs-12">
+      <app-practice></app-practice>
+      <app-server></app-server>
+      <app-practice></app-practice>
+      <app-server></app-server>
+    </div>
+  </div>
+
+</div>
+
+
