--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <div class="row">
 
     <div class="col-xs-12">
+      <h3>sachin </h3>
       <app-practice></app-practice>
       <app-server></app-server>
       <app-practice></app-practice>
